--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -218,7 +218,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 #{{lb|en|heading}} ''To seize hold of.''
 ##{{lb|en|transitive|dated}} To [[grab]], [[seize]], take hold of. {{defdate|from 13<sup>th</sup>c.}}
 ##:{{ux|en|I '''caught''' her by the arm and turned her to face me.}}
-##*'''1590''', {{w|Edmund Spenser}}, ''The Faerie Queene'', III.2:
+##*{{RQ:Spenser Faerie Queene}}, III.2:
 ##*:Her aged Nourse, whose name was Glaucè hight, / Feeling her leape out of her loathed nest, / Betwixt her feeble armes her quickly '''keight'''{{nb...}}.
 ##{{lb|en|transitive}} To [[take]] or [[replenish]] something necessary, such as [[breath]] or [[sleep]]. {{defdate|from 14<sup>th</sup>c.}}
 ##:{{ux|en|I have to stop for a moment and '''catch''' my breath.&emsp; {{nowrap|I '''caught''' some Z's on the train.}}}}
@@ -248,7 +248,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 ##{{lb|en|transitive}} To [[seize]] or intercept a object moving through the air (or, sometimes, some other medium). {{jump|seize in motion|s|t}} {{defdate|from 16<sup>th</sup>c.}}
 ##:{{ux|en|I will throw you the ball, and you '''catch''' it.&emsp; {{nowrap|Watch me '''catch''' this raisin in my mouth.}}}}
 ##{{lb|en|transitive|now|_|rare}} To [[seize]] (an [[opportunity]]) when it occurs. {{jump|seize opportunity|t}} {{defdate|from 16<sup>th</sup>c.}}
-##*'''1811''', {{w|Jane Austen}}, ''Sense and Sensibility'', [[wikisource:Sense_and_Sensibility/Chapter_18|Chapter 18]]:
+##*'''1811''', {{w|Jane Austen}}, ''{{w|Sense and Sensibility}}'', [[wikisource:Sense_and_Sensibility/Chapter_18|Chapter 18]]:
 ##*:she internally resolved henceforward to '''catch''' every opportunity of eyeing the hair and of satisfying herself,{{nb...}}.
 ##{{lb|en|transitive|cricket}} To end a player's [[innings]] by catching a hit ball before the first bounce. {{defdate|from 18<sup>th</sup>c.}}
 ##:{{ux|en|Townsend hit 29 before he was '''caught''' by Wilson.}}
@@ -262,9 +262,9 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 ##{{lb|en|transitive}} To be [[infect]]ed by (an illness). {{defdate|from 16<sup>th</sup>c.}}
 ##:{{ux|en|Everyone seems to be '''catching''' the flu this week.}}
 ##{{lb|en|intransitive}} To spread by [[infection]] or similar means.
-##* Addison
+##*{{w|Joseph Addison}} (1672–1719)
 ##*:Does the sedition '''catch''' from man to man?
-##* Mary Martha Sherwood
+##*{{w|Mary Martha Sherwood}} (1775–1851)
 ##*:He accosted Mrs. Browne very civilly, told her his wife was very ill, and said he was sadly troubled to get a white woman to nurse her: "For," said he, "Mrs. Simpson has set it abroad that her fever is '''catching'''."
 ##{{lb|en|transitive|intransitive}} To [[receive]] or be affected by (wind, water, fire etc.). {{defdate|from 18<sup>th</sup>c.}}
 ##:{{ux|en|The bucket '''catches''' water from the downspout.&emsp; {{nowrap|The trees '''caught''' quickly in the dry wind.}}}}
