--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -8,7 +8,20 @@
 #: {{usex|Mexico and Canada border the '''United States of America'''.|lang=en}}
 
 ====Synonyms====
-* {{sense|country in North America}} [[America]], [[arsenal of democracy]], [[land of the free]], [[United States]], [[United States of North America]], [[U.S.]], [[USA]]/[[U.S.A.]], [[US-America]], [[U.S. of A.]], [[Usania]], [[Usona]], [[Usonia]], [[Yankee land]]; [['murica]]/[['Murica]], [[Merica]]
+*[[America]]
+**[[Merica]]
+**[['Murica]]/[['murica]]
+*[[United States]]
+**[[United States of North America]]
+**[[U.S.]]/[[US]]
+**[[U.S.A.]]/[[USA]]
+**[[U.S. of A.]]
+**[[Usania]]
+**[[Usonia]]
+**[[Usona]]
+*[[Yankee land]] 
+*[[arsenal of democracy]]
+*[[land of the free]]
 
 ====Translations====
 {{trans-top|Country in North America}}
