--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -335,17 +335,17 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 
 #{{lb|en|heading|transitive}} ''To [[incise]], to cut into the surface of something.''
 ##To [[perform]] an [[incision]] on, for example with a [[knife]].
-##*Shakespeare
+##*{{w|William Shakespeare}} (c.1564–1616)
 ##*:You must '''cut''' this flesh from off his breast.
 ##To [[divide]] with a [[knife]], [[scissors]], or another [[sharp]] [[instrument]].
 ##:{{ux|en|Would you please '''cut''' the cake?}}
-##* Alexander Pope
+##*{{w|Alexander Pope}} (1688-1744)
 ##*:Before the whistling winds the vessels fly, / With rapid swiftness '''cut''' the liquid way.
 ##To [[form]] or [[shape]] by cutting.
 ##:{{ux|en|I have three diamonds to '''cut''' today.}}
-##* Shakespeare
+##*{{w|William Shakespeare}} (c.1564–1616)
 ##*:Why should a man, whose blood is warm within, / Sit like his grandsire '''cut''' in alabaster?
-##* Milton
+##*{{w|John Milton}} (1608-1674)
 ##*:loopholes '''cut''' through thickest shade
 ##To [[wound]] with a knife.
 ##*'''1990''', {{w|Stephen Dobyns}}, ''The house on Alexandrine''
@@ -353,7 +353,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 ##To deliver a [[stroke]] with a [[whip]] to.
 ##To wound or hurt deeply the sensibilities of; to pierce.
 ##:{{ux|en|Sarcasm '''cuts''' to the quick.}}
-##* Addison
+##*{{w|Joseph Addison}} (1672–1719)
 ##*:The man was '''cut''' to the heart.
 ##To [[castrate]] or [[geld]].
 ##:{{ux|en|to '''cut''' a horse}}
@@ -372,7 +372,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 |passage=In order to grant the rich these pleasures, the social contract is reconfigured. The welfare state is dismantled. Essential public services are '''cut''' so that the rich may pay less tax.{{nb...}}}}
 ##To absent oneself from (a class, an appointment, etc.).
 ##:{{ux|en|I '''cut''' fifth period to hang out with Angela.}}
-##* Thomas Hamilton
+##*{{w|Thomas Hamilton (writer)|Thomas Hamilton}} (1789-1842)
 ##*:An English tradesman is always solicitous to '''cut''' the shop whenever he can do so with impunity.
 ##To [[ignore]] as a social [[snub]].
 ##:{{ux|en|After the incident at the dinner party, people started to '''cut''' him on the street.}}
