--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -350,7 +350,9 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 ##To [[wound]] with a knife.
 ##*'''1990''', {{w|Stephen Dobyns}}, ''The house on Alexandrine''
 ##*:We don't want your money no more. We just going to '''cut''' you.
-##To deliver a [[stroke]] with a [[whip]] to.
+##To deliver a [[stroke]] with a [[whip]] or like instrument to.
+##*{{RQ:Frgsn Zlnstn|IV}}
+##*:“My Continental prominence is improving,” I commented dryly. ¶ Von Lindowe '''cut''' at a furze bush with his silver-mounted rattan. ¶ “Quite so,” he said as dryly, his hand at his mustache. “I may say if your intentions were known your life would not be worth a curse.”
 ##To wound or hurt deeply the sensibilities of; to pierce.
 ##:{{ux|en|Sarcasm '''cuts''' to the quick.}}
 ##*{{w|Joseph Addison}} (1672–1719)
