--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -305,7 +305,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * German: {{t+|de|kommen}}
 * Greek: {{t+|el|χύνω}} {{qualifier|slang}}
 {{trans-mid}}
-* Hungarian: {{t|hu|elélvez}}
+* Hungarian: {{t|hu|elélvez}}, {{t+|hu|elmegy}}
 * Icelandic: {{t|is|fá það}}
 * Italian: {{t+|it|venire}}
 * Japanese: {{t+|ja|いく|tr=iku}}
