--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -61,6 +61,8 @@ From {{etyl|enm|en}} {{term|crepen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|crē
 * German: {{t+|de|kriechen}}
 * Hungarian: {{t+|hu|kúszik}}
 * Japanese: {{t|ja|這う|tr=hau|sc=Jpan}}, {{t|ja|伝う|tr=tsutau|sc=Jpan}}
+* Maori: {{t|mi|toropā}} {{qualifier|refers to plants}}
+* Maori: {{t|mi|toropā}} {{qualifier|refers to plants}}
 * Russian: {{t+|ru|стели́ться|impf}}
 * Swedish: {{t|sv|klänga}}
 {{trans-bottom}}
