--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -18,6 +18,8 @@ From {{etyl|enm|en}} {{m|enm|chosen}}, {{m|enm|chesen}}, from {{etyl|ang|en}} {{
 
 #To [[pick]]; to make the choice of; to select.
 #:{{ux|en|I '''chose''' a nice ripe apple from the fruit bowl.}}
+#*{{RQ:RnhrtHpwd Bat|I|01}}
+#*:The Bat—they called him the Bat. Like a bat he '''chose''' the night hours for his work of rapine; like a bat he struck and vanished, pouncingly, noiselessly; like a bat he never showed himself to the face of the day.
 #To [[elect]].
 #:{{ux|en|He was '''chosen''' as president in 1990.}}
 #To [[decide]] to act in a certain way.
