--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -149,7 +149,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Irish: {{t+|ga|droichead|m}}
 * Istriot: {{t|ist|ponto|m}}
 * Italian: {{t+|it|ponte|m}}
-* Japanese: {{t+|ja|橋|tr=はし, hashi|sc=Jpan}}
+* Japanese: {{t+|ja|橋|tr=はし, hashi|sc=Jpan}}, {{t+|ja|橋梁|tr=きょうりょう, kyōryō|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|pont|m}}
 * Kabardian: {{t|kbd|лъэмыж}}
 * Kannada: {{t+|kn|ಸೇತುವೆ|tr=sētuve|sc=Knda}}
