--- a/en/垒/垒.13078.wikitext
+++ b/en/垒/垒.13078.wikitext
@@ -11,5 +11,14 @@
 * {{Han ref|kx=0227.390|dkj=05039|dj=0463.240|hdz=10442.130|uh=5792|ud=22418}}
 
 ----
+
 ==Chinese==
 {{zh-see|壘}}
+
+[[Category:CJKV characters simplified differently in Japan and China|壘2]]
+
+[[fr:垒]]
+[[mg:垒]]
+[[pl:垒]]
+[[chr:垒]]
+[[zh:垒]]
