--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -249,7 +249,7 @@
 [[Category:en:Colors]]
 [[Category:en:Fruits]]
 [[Category:en:Greens]]
-[[Category:en:Trees]]
+[[Category:en:Olives and allies]]
 
 ----
 
