--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -27,7 +27,7 @@ In current form, calligraphical rendering of 臼.
 ==Japanese==
 
 ===Kanji===
-{{ja-kanji|grade=5|rs=日01}}
+{{ja-kanji|grade=5|rs=日01|style=s|kyu=舊}}
 
 ====Readings====
 * {{ja-readings|goon=[[ぐ]] (gu)|kanon=[[きゅう]] (kyū)|kanyoon=[[く]] (ku)|kun=[[ふるい]] ([[旧い]], furui), [[もと]] (moto)}}
