--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -160,6 +160,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Chechen: {{t-needed|ce}}
 * Chinese:
 *: Mandarin: {{t+|cmn|來|sc=Hani}}, {{t+|cmn|来|tr=lái|sc=Hani}}
+* Classical Nahuatl: {{t|nci|huītz}}
 * Crimean Tatar: {{t|crh|kelmek}}
 * Czech: {{t+|cs|přicházet|impf}}, {{t+|cs|přijít|pf}}; {{t|cs|přijíždět|impf}}, {{t+|cs|přijet|pf}} {{qualifier|by transport}}
 * Dalmatian: {{t|dlm|vener}}
