--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -30,7 +30,7 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 {{checksense}}
 * To [[draw]]
 * To [[attract]]
-* (3, 4, 8 above) To [[blow]]
+* (7, 8 above) To [[blow]]
 * See also [[Wikisaurus:give head]]
 
 ====Antonyms====
