--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -565,6 +565,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Macedonian: {{t|mk|игра|f|tr=ígra}}
 {{trans-mid}}
 * Polish: {{t+|pl|gra|f}}
+* Portuguese: {{t+|pt|jogo|m}}
 * Russian: {{t+|ru|игра|f|tr=igrá}}
 * Slovene: {{t+|sl|igra|f}}
 * Spanish: {{t+|es|juego|m}}
