--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -259,9 +259,10 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * German: {{t+|de|sprechen}}
 * Hebrew: {{t+|he|דיבר|tr=dibér}}
 * Italian: {{t+|it|parlare}}
-* Japanese: {{t+|ja|話す|tr=はなす, hanasu|sc=Jpan}}
 {{trans-mid}}
+* Japanese: {{t+|ja|話す|tr=はなす, hanasu|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|pâler}}
+* Khmer: {{t-needed|km}}
 * Latvian: {{t+|lv|runāt}}
 * Lithuanian: {{t+|lt|kalbėti}}
 * Lojban: {{t|jbo|baupli}}
