--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -262,7 +262,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 {{trans-mid}}
 * Japanese: {{t+|ja|話す|tr=はなす, hanasu|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|pâler}}
-* Khmer: {{t-needed|km}}
+* Khmer: {{t+|km|និយាយ|tr=ni’yiey|sc=Khmr}}
 * Latvian: {{t+|lv|runāt}}
 * Lithuanian: {{t+|lt|kalbėti}}
 * Lojban: {{t|jbo|baupli}}
