--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -18,12 +18,21 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=gwan1}}
+===Pronunciation===
+{{zh-pron
+|m=kūn
+|c=gwan1
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=日04}}
+===Definitions===
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -64,15 +73,6 @@
 * [[混]] ([[곤]], ''gon'') ''maybe'', [[Hun]]s or [[Hünen]] "giants" 
 
 [[Category:Hanja readings|곤]]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[kūn]] ([[kun1]])|wg=k'un<sup>1</sup>}}, [[hùn]]
-
-# {{defn|lang=cmn|sort=日04}}
 
 ----
 
