--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -75,7 +75,7 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{term|پایجامه|tr=pāyjāma|lang=ur}} 
 * Tajik: {{t|tg|пижама|sc=Cyrl}}
 * Turkish: {{t+|tr|pijama}}
 * Ukrainian: {{t|uk|піжа́ма|f|sc=Cyrl}}
-* Urdu: {{t|ur|پاجاما|tr=pājāmā|sc=ur-Arab}}
+* Urdu: {{t|ur|پاجاما|tr=pājāmā|sc=ur-Arab}}, {{t|ur|پایجامه|tr=paijāmā|sc=ur-Arab}}
 * Vietnamese: {{t|vi|pijama}}, {{t|vi|quần áo ngủ}}
 {{trans-bottom}}
 
