--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -41,7 +41,9 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{term|پایجامه|tr=pāyjāma|lang=ur}} 
 * Finnish: {{t+|fi|pyjama}}, {{t+|fi|yöpuku}}
 * French: {{t+|fr|pyjama|m}}
 * Galician: {{t+|gl|pixama|m}}
+* Georgian: {{t|ka|პიჟამო|sc=Geor}}
 * German: {{t+|de|Pyjama|m}}, {{t+|de|Schlafanzug|m}}
+* Greek: {{t+|el|πιτζάμα|sc=Grek}}
 * Hebrew: {{t|he|פִּיגָ׳מָה|f|tr=pijama|sc=Hebr}}
 * Hindi: {{t|hi|पाजामा}}, {{t|hi|पैजामा}}
 * Hungarian: {{t+|hu|pizsama}}
@@ -49,8 +51,8 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{term|پایجامه|tr=pāyjāma|lang=ur}} 
 * Interlingua: {{t|ia|pajama}}
 * Italian: {{t+|it|pigiama|m}}
 * Japanese: {{t|ja|パジャマ|tr=pajama}}, {{t|ja|寝間着|tr=ねまき, nemaki}}
-* Kazakh: {{t+|kk|пижама|sc=Cyrl}}
 {{trans-mid}}
+* Kazakh: {{t+|kk|пижама|sc=Cyrl}}
 * Khmer: {{t|km|ឈុតគេង|tr=cʰut keeŋ|sc=Khmr}}
 * Korean: {{t+|ko|파자마|sc=Hang}}
 * Kyrgyz: {{t|ky|пижама|sc=Cyrl}}
@@ -74,6 +76,7 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{term|پایجامه|tr=pāyjāma|lang=ur}} 
 * Swedish: {{t+|sv|pyjamas|c}}
 * Tajik: {{t|tg|пижама|sc=Cyrl}}
 * Turkish: {{t+|tr|pijama}}
+* Turkmen: {{t|tk|pijama}}
 * Ukrainian: {{t|uk|піжа́ма|f|sc=Cyrl}}
 * Urdu: {{t|ur|پاجاما|tr=pājāmā|sc=ur-Arab}}, {{t|ur|پایجامه|tr=paijāmā|sc=ur-Arab}}
 * Vietnamese: {{t|vi|pijama}}, {{t|vi|quần áo ngủ}}
