--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -47,11 +47,12 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{term|پایجامه|tr=pāyjāma|lang=ur}} 
 * Hebrew: {{t|he|פִּיגָ׳מָה|f|tr=pijama|sc=Hebr}}
 * Hindi: {{t|hi|पाजामा}}, {{t|hi|पैजामा}}
 * Hungarian: {{t+|hu|pizsama}}
+* Icelandic: {{t+|is|náttföt}}
 * Indonesian: {{t+|id|piyama}}
 * Interlingua: {{t|ia|pajama}}
 * Italian: {{t+|it|pigiama|m}}
-* Japanese: {{t|ja|パジャマ|tr=pajama}}, {{t|ja|寝間着|tr=ねまき, nemaki}}
 {{trans-mid}}
+* Japanese: {{t|ja|パジャマ|tr=pajama}}, {{t|ja|寝間着|tr=ねまき, nemaki}}
 * Kazakh: {{t+|kk|пижама|sc=Cyrl}}
 * Khmer: {{t|km|ឈុតគេង|tr=cʰut keeŋ|sc=Khmr}}
 * Korean: {{t+|ko|파자마|sc=Hang}}
