--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -7,7 +7,7 @@
 * {{rhymes|iːp|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{term|crepen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|crēopan||to creep, crawl}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kreupaną||to twist, creep}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*ger-||to turn, wind}}. Cognate with {{etyl|fy|-}} {{term|krippe|lang=fy}}, {{term|krûpe|lang=fy}}, {{etyl|frs|-}} {{term|crjippa||to creep|lang=frs}}, {{etyl|nds|-}} {{term|krepen|lang=nds}}, {{term|krupen|lang=nds}}, {{etyl|nl|-}} {{term|kruipen||to creep, crawl|lang=nl}}, {{etyl|gmh|-}} {{term|kriefen||to creep|lang=gmh}}, Danish {{term|krybe||to creep|lang=da}}, Norwegian {{term|krype||to creep|lang=no}}, {{etyl|sv|-}} {{term|krypa||to creep, crawl|lang=sv}}, {{etyl|is|-}} {{term|krjúpa||to stoop|lang=is}}.
+From {{etyl|enm|en}} {{term|crepen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|crēopan||to creep, crawl}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kreupaną||to twist, creep}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*ger-||to turn, wind}}. Cognate with {{etyl|fy|-}} {{term|krippe|lang=fy}}, {{term|krûpe|lang=fy}}, {{etyl|frs|-}} {{term|crjippa||to creep|lang=frs}}, {{etyl|nds|-}} {{term|krepen|lang=nds}} and {{term|krupen|lang=nds}}, {{etyl|nl|-}} {{term|kruipen||to creep, crawl|lang=nl}}, {{etyl|gmh|-}} {{term|kriefen||to creep|lang=gmh}}, Danish {{term|krybe||to creep|lang=da}}, Norwegian {{term|krype||to creep|lang=no}}, {{etyl|sv|-}} {{term|krypa||to creep, crawl|lang=sv}}, {{etyl|is|-}} {{term|krjúpa||to stoop|lang=is}}.
 
 ====Verb====
 {{en-verb|creeps|creeping|crept|past2=creeped|past3=crope|past3_qual=obsolete|crept|past_ptc2=creeped|past_ptc3=cropen|past_ptc3_qual=archaic}}
