--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -148,6 +148,7 @@ From {{etyl|enm|en}} {{m|enm|chosen}}, {{m|enm|chesen}}, from {{etyl|ang|en}} {{
 * Hindi: {{t|hi|चुनना|tr=cunnā}}
 * Hungarian: {{t+|hu|megválaszt}}, {{t+|hu|választ}}
 * Icelandic: {{t+|is|velja}}
+* Ido: {{t+|io|elektar}}
 * Ilocano: {{t|ilo|pili}}
 * Indonesian: {{t+|id|memilih}}, {{t+|id|pilih}}
 * Irish: {{t|ga|togh}}
