--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -330,6 +330,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Italian: {{t+|it|giocare}}
 {{trans-mid}}
 * Javanese: {{t+|jv|dolanan}}
+* Khmer: {{t-needed|km}}
 * Kurdish:
 *: Sorani: {{t|ku|یاری کردن|tr=yarí kirdin|sc=ku-Arab}}
 * Latin: {{t|la|lūdō}}
@@ -350,6 +351,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Swahili: {{t+|sw|tamthilia}}
 * Swedish: {{t+|sv|spela}}
 * Tagalog: {{t|tl|maglaro}}
+* Thai: {{t-needed|th}}
 * Turkish: {{t+|tr|oynamak}}
 {{trans-bottom}}
 
