--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -332,7 +332,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Italian: {{t+|it|lotta|f}}, {{t+|it|incontro|m}}
 * Japanese: {{t|ja|戦い|tr=たたかい, tatakai|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|bastaude|f}}, {{t|roa-jer|frip'sie|f}}
-* Khmer: {{t-needed|km}}
+* Khmer: {{t|km|ជំលោះ|tr=cumlʊəh|sc=Khmr}}, {{t+|km|ព្យតិហារ|tr=pyea’te’haa|sc=Khmr}}
 {{trans-mid}}
 * Korean: {{t+|ko|싸움|sc=Kore}}
 * Kurdish:
