--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -51,7 +51,7 @@
 {{mid4}}
 * [[停車]]
 {{mid4}}
-* [[バス停]] ([[バスてい]], [[basutei]]) [[bus stop]]
+* [[バス停]] (バスてい, basutei) [[bus stop]]
 {{mid4}}
 {{bottom}}
 
